Fix CSS for film posters on smaller screens

--- a/features/films/style.public.css
+++ b/features/films/style.public.css
@@ -88,8 +88,7 @@ ol.watched-films {
 
             & > img {
                 width: 100%;
-                height: 225px;
-                object-fit: cover;
+                height: auto;
                 border-bottom: 1px solid var(--background-alt-colour);
             }
 
